--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,3 @@
-<form class="" action="" method="post">
-  Title:   <input type="text" name="title" value=""><br><br>
-  Author : <input type="text" name="author" value=""><br><br>
-  Price   :  <input type="number" name="price" value=""> <br><br>
-  Owner   : <input type="text" name="owner" value=""> <br><br>
-  Rating  : <input type="number" name="rating" value=""> <br><br>
-  Branch  : <input type="text" name="branch" value=""> <br><br>
-  sem     :<input type="number" name="sem" value=""> <br><br>
-  <input type="submit" name="submit" value="submit">
+<form class="" action="google" >
+  <input type="submit" name="GOOGLE LOGIN" value="GOOGLE LOGIN">
 </form>
