--- a/templates/dashboards.html
+++ b/templates/dashboards.html
@@ -20,7 +20,7 @@
 
   <tr>
       <td>
-        <form action="bookDetails" method="post">
+        <form action="bookDetails" method="get">
         <input type="submit" name="book" value="{{b[1]}}">
         </form>
       </td>
