--- a/templates/listOfMyBooks.html
+++ b/templates/listOfMyBooks.html
@@ -9,8 +9,8 @@
     {{i[1]}} <br>
     {{i[2]}} <br>
     <form class="" action="edit" method="post">
-      <button type="submit" name="edit" value ="{{i[0]}}"">Edit </button> <br>
-      <button type="submit" name="delete" value ="{{i[0]}}"">Delete</button> <br><br>
+      <button type="submit" name="edit" value ="{{i[0]}}">Edit </button> <br>
+      <button type="submit" name="delete" value ="{{i[0]}}">Delete</button> <br><br>
     </form>
 
 
