--- a/templates/notifiy.html
+++ b/templates/notifiy.html
@@ -1,13 +1,15 @@
+
 <br><br>
 Notifications <br><br>
-  {%for n in notif%}
+  {%for n in notifiy %}
 
-<h4>Title : {{n[1]}} <br>
-    Author : {{n[2]}} </h4>
+<h4>Title : {{n[0]}} <br>
+     Author : {{n[2]}} </h4>
 <h4>Price : {{n[4]}}  </h4>
 <form action="/closeDeal" method="post">
-Request :<button type="submit" name="reqbook" value="{{n[5]}}">{{n[5]}}</button><br><br>
+Request :<button type="submit" name="reqbook" value="{{n[13]}}">{{n[13]}}</button><br><br>
 <button type="submit" name="deal" value="{{n[0]}}">Close Deal</button>
 </form>
-<h4>Value : {{n[5]}}  </h4>
+<h4>Value : {{n[13]}}  </h4>
+
     {% endfor %}
