--- a/templates/sell.html
+++ b/templates/sell.html
@@ -44,6 +44,8 @@
   Owner   : <input type="text" name="owner" value=""> <br><br>
   Rating  : <input type="number" name="rating" value=""> <br><br>
   sem     : <input type="number" name="sem" value=""> <br><br>
+<!--  Edition : <input type="number" name="edition" value=""> <br><br> -->
+  Photo : <input type="file" name="pic" accept="jpeg"> <br>
   Branch  : <select id = "dept0" name="dept">
   <option value="SE">SELECT </option>
   <option value="AS">Aero Space</option>
