--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,9 +11,11 @@
     Branch : {{i[3]}} <br>
     Phone : {{i[5]}} <br>
     <br><br>
-    <a href="profile/upload">Books in Stall </a> <br>
+    <a href="profile/uploaded">Books in Stall </a> <br>
     <a href="profile/pending">Books to be submitted</a> <br>
     <a href="profile/sold">Books Sold</a> <br>
+    <a href="profile/requested">Books Requested</a> <br>
+    <a href="profile/purchased">Books Purchased</a> <br>
 
  {%endfor%}
   </body>
