--- a/templates/bookSellers.html
+++ b/templates/bookSellers.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-
+<!--
 <script type="text/javascript" >
    function preventBack(){window.history.forward();}
     setTimeout("preventBack()", 0);
     window.onunload=function(){null};
 </script>
-
+-->
   </head>
   <body>
 
@@ -26,7 +26,10 @@
       <form action="requestBook" method="post">
         <button name="req" type="submit" value="{{b[2]}}">Buy Book</button>
       </form>
-
+      <form action="addcart" method="post">
+        <button name="cartid" type="submit" value="{{b[2]}}">Add To Cart</button>
+      </form>
+{{b[2]}} <br>
       {% endfor %}
 <br><br><br> <h2>
   Reviews By the Buyers
