--- a/templates/upload.html
+++ b/templates/upload.html
@@ -95,19 +95,20 @@ background-color: #eee;
                   <li class="nav-item ">
                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item">
-                     <a href="about.html" class="nav-link">About</a>
+                  <li class="nav-item active">
+                     <a href="/sell" class="nav-link">Sell</a>
                   </li>
-                  <li class="nav-item">
-                     <a href="service.html" class="nav-link">Service</a>
-                  </li>
-                  <li class="nav-item">
-                     <a href="shop.html" class="nav-link">Shop Now</a>
+
+                  <li class="nav-item active">
+                     <a href="/asd" class="nav-link">Shop Now</a>
                   </li>
 
 
                   <li class="nav-item">
-                     <a href="contact.html" class="nav-link">Contact</a>
+                     <a href="/dashboard" class="nav-link">{{name}}</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="/logout" class="nav-link">Logout</a>
                   </li>
                </ul>
             </div>
@@ -205,7 +206,7 @@ background-color: #eee;
                      </div>
 
                   </div>
-                 
+
                   <p id="add">
 
                   </p>
