small front end changes

--- a/templates/payment.html
+++ b/templates/payment.html
@@ -35,15 +35,15 @@
      xhttp.open("GET",  url + "?search="+key  , true);
      xhttp.send();
      }
-     // function addreview(){
-     //   console.log("function called");
-     //   var area = document.createElement("textarea");
-     //   var btn = document.createElement("button");
-     //   btn.innerHTML ="<br><br>" +   "Submit" ;
-     //   document.getElementById("area").appendChild(area);
-     //   document.getElementById("area").appendChild(btn);
-     //  document.getElementById("addreview").style.display ="none" ;
-     // }
+     function addreview(){
+       console.log("function called");
+       var area = document.createElement("textarea");
+       var btn = document.createElement("button");
+       btn.innerHTML ="<br><br>" +   "Submit" ;
+       document.getElementById("area").appendChild(area);
+       document.getElementById("area").appendChild(btn);
+      document.getElementById("addreview").style.display ="none" ;
+     }
      </script>
      <style type = 'text/css' media="screen">
 
