--- a/templates/editBookDetails.html
+++ b/templates/editBookDetails.html
@@ -1,67 +1,4 @@
-<!-- <head>
-  <script type="text/javascript">
-    var count = 1 ;
 
-    function stringJoin(){
-      var str = "" ;
-      str = document.getElementById("dept1").value ;
-      console.log(str);
-
-    }
-
-  function addSelect(divname) {
-     var newDiv=document.createElement('div');
-
-     console.log(count.toString());
-     var html = '<br>Branch  '+count+': <select id = "dept"'+count+' name="dept">' +
-      '<option value="SE">SELECT </option>' +
-      '<option value="AS">Aero Space</option>' +
-      '<option value="BT">Bio Technology</option>' +
-      '<option value="CE">Chemical Engineering</option>'+
-      '<option value="CS">Computer Science</option>'+
-      '<option value="CV">Civil</option>'+
-      '<option value="ME">Mechanical</option>'+
-      '<option value="IS">Information Science</option>'+
-      '<option value="EC">Electonics and Communication</option>'+
-      '<option value="EE">Electrical and Electonics</option>'+
-      '<option value="MCA">Master in Computer Application</option>'+
-      '<option value="TE">Telecommunicaton Engineering</option>';
-     newDiv.innerHTML= html;
-     count++;
-     document.getElementById(divname).appendChild(newDiv);
-
-  }
-  </script>
-
-</head>
-
-
-
-<form class="" action="edit" method="post">
-  Title:   <input type="text" name="title" value="{{b[1]}}"><br><br>
-  <input type="hidden" name="bookid" value="{{b[0]}}">
-  Author : <input type="text" name="author" value="{{b[2]}}"><br><br>
-  Edition  : <input type="number" name="edition" value="{{b[3]}}"> <br><br>
-  Price   : <input type="number" name="price" value="{{b[4]}}"> <br><br>
-  Rating  : <input type="number" name="rating" value="{{b[6]}}"> <br><br>
-  sem     : <input type="number" name="sem" value="{{b[10]}}"> <br><br>
-  Branch  : <select id = "dept0" name="dept">
-  <option value="SE">SELECT </option>
-  <option value="AS">Aero Space</option>
-  <option value="BT">Bio Technology</option>
-  <option value="CE">Chemical Engineering</option>
-  <option value="CS">Computer Science</option>
-  <option value="CV">Civil</option>
-  <option value="ME">Mechanical</option>
-  <option value="IS">Information Science</option>
-  <option value="EC">Electonics and Communication</option>
-  <option value="EE">Electrical and Electonics</option>
-  <option value="MCA">Master in Computer Application</option>
-  <option value="TE">Telecommunicaton Engineering</option>
-</select><br> <br>
-<button id="updateData" type="submit" name="updateData" > Done </button>
-</form>
-<br> -->
 
 
 <!DOCTYPE html>
@@ -125,8 +62,7 @@ background-color: #eee;
 }
 </style>
 
-     </script>
-      <title>Book Store</title>
+       <title>Book Store</title>
 
 
       <!--//meta tags ends here-->
@@ -151,34 +87,36 @@ background-color: #eee;
 
       <!--headder-->
 
-         <nav class="navbar navbar-expand-lg navbar-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-               <ul class="navbar-nav ">
-                  <li class="nav-item ">
-                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                     <a href="about.html" class="nav-link">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a href="service.html" class="nav-link">Service</a>
-                  </li>
-                  <li class="nav-item">
-                     <a href="shop.html" class="nav-link">Shop Now</a>
-                  </li>
+      <nav class="navbar navbar-expand-lg navbar-light">
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav ">
+               <li class="nav-item ">
+                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item">
+                  <a href="about.html" class="nav-link">About</a>
+               </li>
+               <li class="nav-item active">
+                  <a href="/sell" class="nav-link">Sell</a>
+               </li>
 
-
-                  <li class="nav-item">
-                     <a href="contact.html" class="nav-link">Contact</a>
-                  </li>
-               </ul>
-            </div>
-         </nav>
-      </div>
-	  </div>
+               <li class="nav-item active">
+                  <a href="/asd" class="nav-link">Shop Now</a>
+               </li>
+               <li class="nav-item">
+                  <a href="/dashboard" class="nav-link">{{name}}</a>
+               </li>
+               <li class="nav-item">
+                  <a href="/logout" class="nav-link">Logout</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
+   </div>
+ </div>
       <!--//headder-->
       <!-- banner -->
 
@@ -200,7 +138,7 @@ background-color: #eee;
                   <a href="/dashboard">Home</a>
                   <span>/</span>
                </li>
-               <li>Sell Book</li>
+               <li>Edit Book Details</li>
             </ul>
          </div>
       </div>
@@ -209,7 +147,7 @@ background-color: #eee;
       <!--Typography-->
       <section class="inner-pages py-5">
          <div class="container py-xl-5 py-sm-3">
-            <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Sell Book</h3>
+            <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Edit Book Details</h3>
             <!-- forms -->
             <section class="typo-section py-4 border-top border-bottom">
                <h3 class="typo-main-heading mb-lg-4 mb-3 pr-3 pb-1">Fill in the details</h3>
@@ -243,10 +181,7 @@ background-color: #eee;
                               <label for="inputCity">Sem</label>
                               <input type="number" class="form-control" name="sem" value = "{{b[5]}}"placeholder="Sem">
                            </div>
-                           <div class="form-group col-md-6">
-                              <label for="inputCity">Photo</label>
-                              <input id="file-picker" type="file" name="image" accept="image/*" class="form-control" name="rating" >
-                           </div>
+
                         </div>
 
                   <div class="form-row" id = "drpdwn">
@@ -280,8 +215,8 @@ background-color: #eee;
 
                </form>
                <br>
-               <button id="adddrp" class="btn btn-secondary" onclick="addDropdown()">Add Dropdown</button>&nbsp;&nbsp;&nbsp;&nbsp;
-               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="a" class="btn btn-secondary" onclick="stringJoin();">String display</button>
+               <!-- <button id="adddrp" class="btn btn-secondary" onclick="addDropdown()">Add Dropdown</button>&nbsp;&nbsp;&nbsp;&nbsp;
+               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="a" class="btn btn-secondary" onclick="stringJoin();">String display</button> -->
                <!--// form1 -->
 
             </section>
