--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
    <head>
@@ -29,24 +28,22 @@
           print += '<li><a href='+link+'> ' + res + ' </a></li> ' ;
         }
          document.getElementById("demo").innerHTML = "<center>"+print+"</center>";
-
        }
      };
      xhttp.open("GET",  url + "?search="+key  , true);
      xhttp.send();
      }
-     function addreview(){
-       console.log("function called");
-       var area = document.createElement("textarea");
-       var btn = document.createElement("button");
-       btn.innerHTML ="<br><br>" +   "Submit" ;
-       document.getElementById("area").appendChild(area);
-       document.getElementById("area").appendChild(btn);
-      document.getElementById("addreview").style.display ="none" ;
-     }
+     // function addreview(){
+     //   console.log("function called");
+     //   var area = document.createElement("textarea");
+     //   var btn = document.createElement("button");
+     //   btn.innerHTML ="<br><br>" +   "Submit" ;
+     //   document.getElementById("area").appendChild(area);
+     //   document.getElementById("area").appendChild(btn);
+     //  document.getElementById("addreview").style.display ="none" ;
+     // }
      </script>
      <style type = 'text/css' media="screen">
-
      #demo {
        list-style-type: none;
        padding: 0;
@@ -62,7 +59,102 @@ font-size: 18px;
 color: black;
 display: block
 }
+html, body {
+  text-align: center;
+  padding-top: 40px;
 
+  -webkit-perspective: 700px;
+     -moz-perspective: 700px;
+      -ms-perspective: 700px;
+          perspective: 700px;
+}
+/* Reset */
+.button {
+  background: transparent;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+  outline: 0;
+  -webkit-appearance: none;
+}
+/* Custom */
+.button {
+  display: inline-block;
+  position: relative;
+  padding: 10px 18px;
+  top: 0;
+  font-size: 30px;
+  font-family: "Open Sans", Helvetica;
+  border-radius: 4px;
+  border-bottom: 1px #EA1D5D;
+  background: #EA1D5D;
+  color: #fff;
+  box-shadow:#EA1D5D;
+
+  -webkit-transform: translateZ(0);
+     -moz-transform: translateZ(0);
+      -ms-transform: translateZ(0);
+          transform: translateZ(0);
+
+  -webkit-transition: all 0.2s ease;
+     -moz-transition: all 0.2s ease;
+      -ms-transition: all 0.2s ease;
+          transition: all 0.2s ease;
+}
+.button:hover {
+  top: -10px;
+  box-shadow: #EA1D5D;
+
+  -webkit-transform: rotateX(20deg);
+     -moz-transform: rotateX(20deg);
+      -ms-transform: rotateX(20deg);
+          transform: rotateX(20deg);
+}
+.button:active {
+  top: 0px;
+  box-shadow: #EA1D5D;
+  background: #EA1D5D;
+}
+#demo li a:hover:not(.header) {
+background-color: #eee;
+}
+         button {
+  display: inline-block;
+  position: relative;
+  padding: 10px 18px;
+  top: 0;
+  font-size: 30px;
+  font-family: "Open Sans", Helvetica;
+  border-radius: 4px;
+  border-bottom: 1px solid #EA1D5D;
+  background: #EA1D5D;
+  color: #fff;
+  box-shadow: #EA1D5D;
+
+  -webkit-transform: translateZ(0);
+     -moz-transform: translateZ(0);
+      -ms-transform: translateZ(0);
+          transform: translateZ(0);
+
+  -webkit-transition: all 0.2s ease;
+     -moz-transition: all 0.2s ease;
+      -ms-transition: all 0.2s ease;
+          transition: all 0.2s ease;
+}
+button:hover {
+  top: -10px;
+  box-shadow:#EA1D5D;
+
+  -webkit-transform: rotateX(20deg);
+     -moz-transform: rotateX(20deg);
+      -ms-transform: rotateX(20deg);
+          transform: rotateX(20deg);
+}
+button:active {
+  top: 0px;
+  box-shadow: 0px 0px 0px rgba( 15, 165, 60, 0.0 );
+  background:#EA1D5D;
+}
 #demo li a:hover:not(.header) {
 background-color: #eee;
 }
@@ -70,7 +162,7 @@ background-color: #eee;
 
      </script>
       <title>Book Store</title>
-      <!--meta tags -->
+       <!--meta tags -->
 
       <!--//meta tags ends here-->
       <!--booststrap-->
@@ -92,6 +184,83 @@ background-color: #eee;
       <link href="//fonts.googleapis.com/css?family=Sunflower:500,700" rel="stylesheet">
       <link href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
       <style>
+          .box {
+  width: 40%;
+  margin: 0 auto;
+  background: rgba(255,255,255,0.2);
+  padding: 35px;
+  border: 2px solid #fff;
+  border-radius: 20px/50px;
+  background-clip: padding-box;
+  text-align: center;
+}
+.button {
+  font-size: 1em;
+  padding: 10px;
+  color: #fff;
+  border: 2px solid #EA1D5D;
+  border-radius: 20px/50px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+.button:hover {
+  background: #EA1D5D;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {
+  color: #06D85F;
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+@media screen and (max-width: 700px){
+  .box{
+    width: 70%;
+  }
+  .popup{
+    width: 70%;
+  }
+}
       a{
          color: black;
       }
@@ -102,7 +271,6 @@ background-color: #eee;
       <!-- <div class="header-outs" id="home">
       <div class="header-bar">
          <div class="info-top-grid">
-
          </div>
          <div class="container-fluid">
             <div class="hedder-up row">
@@ -115,7 +283,6 @@ background-color: #eee;
                      <button class="btn" type="submit">Search</button>
                   </form>
                </div>
-
             </div>
          </div> -->
          <nav class="navbar navbar-expand-lg navbar-light">
@@ -229,6 +396,7 @@ background-color: #eee;
                                                              Author : {{n[2]}} <br>
                                                              Price : {{n[4]}}
                                                           <form action="/closeDeal" method="post">
+
                                                           Request :<button type="submit" name="reqbook"  value="{{n[13]}}">{{n[5]}}</button> &nbsp&nbsp&nbsp&nbsp
                                                           <button type="submit" name="deal" value="{{n[0]}}">Close Deal</button>
                                                           </form>
@@ -281,7 +449,24 @@ background-color: #eee;
                                                       Dated :{{s[4]}} <br>
                                                       Transaction Id: {{s[5]}} <br>
                                                       Price :{{s[10]}} <br>
-                                                      <button type="add" id = "addreview" onclick="addreview()" name="button">Add Public Review</button>
+
+
+<div class="box">
+	<a class="button" type="add" id = "addreview" onclick="addreview()" name="button" href="#popup1">Add Public Review</a>
+</div>
+
+<div id="popup1" class="overlay">
+	<div class="popup">
+		<h2>Here i am</h2>
+		<a class="close" href="#">&times;</a>
+		<div class="content">
+      <input type="text" width="2px">
+
+             <button>submit</button>
+		</div>
+	</div>
+</div>
+
                                                       <p id="area" name="area"></p>
                                                       <hr>
 
@@ -362,13 +547,10 @@ background-color: #eee;
       <script src="{{url_for('static' , filename = 'js/minicart.js')}}"></script>
       <script>
          toys.render();
-
          toys.cart.on('toys_checkout', function (evt) {
          	var items, len, i;
-
          	if (this.subtotal() > 0) {
          		items = this.items();
-
          		for (i = 0, len = items.length; i < len; i++) {}
          	}
          });
@@ -408,7 +590,6 @@ background-color: #eee;
          		'.creditly-wrapper .credit-card-number',
          		'.creditly-wrapper .security-code',
          		'.creditly-wrapper .card-type');
-
          	$(".creditly-card-form .submit").click(function (e) {
          		e.preventDefault();
          		var output = creditly.validate();
@@ -425,13 +606,11 @@ background-color: #eee;
       {
         $("taba").css("display","block");
         $("tabb").css("display","none");
-
       });
       $("tb").on("click",funsction()
     {
       $("tabb").css("display","block");
       $("taba").css("display","none");
-
     });
   });
        </script>
@@ -454,7 +633,6 @@ background-color: #eee;
       <!-- here stars scrolling icon -->
       <script>
          $(document).ready(function () {
-
          	var defaults = {
          		containerID: 'toTop', // fading element id
          		containerHoverID: 'toTopHover', // fading element hover id
@@ -464,7 +642,6 @@ background-color: #eee;
          	$().UItoTop({
          		easingType: 'easeOutQuart'
          	});
-
          });
       </script>
       <!-- //here ends scrolling icon -->
