--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -5,19 +5,18 @@
     <title></title>
   </head>
   <body>
-    {%for i in booksList%}
-    {{i[1]}} <br>
-    {{i[0]}} <br>
-    title : {{i[7]}} <br>
-    Author : {{i[8]}} <br>
+
+
+    title :   {{books[1]}}<br>
+    Author : {{books[2]}} <br>
 
     <form class="" action="purchased/addreview" method="post">
-      <input type="hidden" name="book_id" value="{{i[0]}}">
+      <input type="hidden" name="book_id" value="{{books[0]}}">
       <textarea  name="publicreview" placeholder="Details"></textarea> <br>
-      <button type="submit" name="addpublicreview" value ="{{i[0]}}">Add Public Review </button> <br><br>
+      <button type="submit" name="addpublicreview" value ="{{books[0]}}">Add Public Review </button> <br><br>
     </form>
 
 
-    {%endfor%}
+
   </body>
 </html>
