final exam final

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -210,14 +210,12 @@ background-color: #eee;
                   <p id="add">
 
                   </p>
-                  <input type="submit"  class="btn btn-primary" name="submit" onclick = "stringJoin()" value="submit" >
+                  <input type="submit"  class="btn btn-primary" name="submit" value="submit" >
 
 
                </form>
                <br>
-               <button id="adddrp" class="btn btn-secondary" onclick="addDropdown()">Add Dropdown</button>&nbsp;&nbsp;&nbsp;&nbsp;
-               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="a" class="btn btn-secondary" onclick="stringJoin();">String display</button>
-               <!--// form1 -->
+
 
             </section>
             <!--// forms -->
