--- a/templates/bookDetails.html
+++ b/templates/bookDetails.html
@@ -1,31 +1,39 @@
-<html>
+
+   <html lang="zxx">
    <head>
-      <title>Toys Shop an Ecommerce Category Bootstrap Responsive Web Template | Home :: w3layouts</title>
+      <title>Book Store</title>
+      <!--meta tags -->
 
       <script>
          addEventListener("load", function () {
-         	setTimeout(hideURLbar, 0);
+           setTimeout(hideURLbar, 0);
          }, false);
 
          function hideURLbar() {
-         	window.scrollTo(0, 1);
+           window.scrollTo(0, 1);
          }
       </script>
       <!--//meta tags ends here-->
       <!--booststrap-->
-      <link href="{{ url_for( 'static',filename='css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" media="all">
+      <link href="{{ url_for('static' , filename='css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" media="all">
       <!--//booststrap end-->
-      <!-- font-awesome icons -->
-      <link href="{{url_for('static',filename='css/fontawesome-all.min.css')}}" rel="stylesheet" type="text/css" media="all">
+      <!-- font-awesome icons
+
+  <link href="{{url_for('static' , filename = 'css/flexslider.css')}}" rel="stylesheet" type="text/css" media="all">
+     -->
+
+
+      <link href="{{url_for('static' , filename = 'css/fontawesome-all.min.css')}}" rel="stylesheet" type="text/css" media="all">
       <!-- //font-awesome icons -->
+      <!-- For Clients slider -->
+      <link rel="stylesheet"href="{{url_for('static' , filename = 'css/flexslider.css')}}" type="text/css" media="all" />
+      <!--flexs slider-->
+      <link href="css/JiSlider.css" rel="stylesheet">
       <!--Shoping cart-->
-      <link rel="stylesheet" href="{{url_for('static',filename='css/shop.css')}}" type="text/css" />
+      <link rel="stylesheet" href="{{url_for('static' , filename = 'css/shop.css')}}" type="text/css" />
       <!--//Shoping cart-->
-      <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/jquery-ui1.css')}}">
-      <link href="{{url_for('static',filename='css/easy-responsive-tabs.css')}}" rel='stylesheet' type='text/css' />
-      <link rel="stylesheet" href="{{url_for('static',filename='css/flexslider.css')}}" type="text/css" media="screen" />
       <!--stylesheets-->
-      <link href="{{url_for('static',filename='css/style.css')}}" rel='stylesheet' type='text/css' media="all">
+      <link href="{{url_for('static' , filename = 'css/style.css')}}" rel='stylesheet' type='text/css' media="all">
       <!--//stylesheets-->
       <link href="//fonts.googleapis.com/css?family=Sunflower:500,700" rel="stylesheet">
       <link href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
@@ -35,20 +43,14 @@
       <div class="header-outs" id="home">
       <div class="header-bar">
 
-            <div class="container-fluid">
-               <div class="hedder-up row">
-                  <div class="col-lg-3 col-md-3 logo-head">
-                     <h1><a class="navbar-brand" href="/">Books-Shop</a></h1>
-                  </div>
-                  <div class="col-lg-5 col-md-6 search-right">
-                     <form class="form-inline my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                        <button class="btn" type="submit">Search</button>
-                     </form>
-                  </div>
+         <div class="container-fluid">
+            <!-- <div class="hedder-up row">
+               <div class="col-lg-3 col-md-3 logo-head">
+                  <h1><a class="navbar-brand" href="index.html">Book Store</a></h1>
+               </div> -->
 
-               </div>
             </div>
+         </div>
          <nav class="navbar navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -56,45 +58,33 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                <ul class="navbar-nav ">
                   <li class="nav-item ">
-                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                     <a class="nav-link" href="/dashboard">Home <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item">
-                     <a href="/dashboard" class="nav-link">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a href="service.html" class="nav-link">Service</a>
-                  </li>
+                
+
                   <li class="nav-item active">
                      <a href="/asd" class="nav-link">Shop Now</a>
                   </li>
-                 <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Pages
-                     </a>
-                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="nav-link" href="icon.html">404 Page</a>
-                        <a class="nav-link " href="typography.html">Typography</a>
-                     </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Product
-                     </a>
-                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="nav-link" href="product.html">Kids Toys</a>
-                        <a class="nav-link " href="product.html">Dolls</a>
-                        <a class="nav-link " href="product.html">Key Toys</a>
-                        <a class="nav-link " href="product.html">Boys Toys</a>
-                     </div>
-					 </li>
                   <li class="nav-item">
-                     <a href="/contact" class="nav-link">Contact</a>
+                     <a class="nav-link" href="/sell"   >
+                     Sell Book
+                     </a>
+
+                  </li>
+
+
+                  <li class="nav-item">
+                     <a href="/addcart" class="nav-link">{{name}}</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="/logout" class="nav-link">Logout</a>
                   </li>
                </ul>
             </div>
          </nav>
       </div>
-	  </div>
+   </div>
+
       <!--//headder-->
       <!-- banner -->
       <div class="inner_page-banner one-img">
