--- a/templates/dashboards.html
+++ b/templates/dashboards.html
@@ -60,9 +60,7 @@
                   <li class="nav-item ">
                      <a class="nav-link" href="/dashboard">Home <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item">
-                     <a href="about.html" class="nav-link">About</a>
-                  </li>
+                
 
                   <li class="nav-item active">
                      <a href="/asd" class="nav-link">Shop Now</a>
@@ -76,9 +74,7 @@
 
                   <li class="nav-item">
                     <form class="" action="google" >
-                      <label for="img">
-<input type="submit"  name="submit" id="img" value="img-btn">
-<img src="{{url_for('static',filename='sign.png')}}" style="height:40px;width:150px;" id="img">
+<input type="submit" value="Google Login" >
 </label>
                        <!-- <input type="submit" name="GOOGLE LOGIN"  class="nav-link" value="GOOGLE LOGIN" style="border:0px;background-color:transparent"> -->
 
