--- a/templates/userDetails.html
+++ b/templates/userDetails.html
@@ -1,25 +1,34 @@
-<!DOCTYPE html>
-<html lang="zxx">
+
+   <html lang="zxx">
    <head>
       <title>Book Store</title>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="keywords" content="Toys Shop Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-         Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+      <!--meta tags -->
+
       <script>
          addEventListener("load", function () {
          	setTimeout(hideURLbar, 0);
          }, false);
-         
+
          function hideURLbar() {
          	window.scrollTo(0, 1);
          }
       </script>
-     <link href="{{url_for('static' , filename = 'css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" media="all">
+      <!--//meta tags ends here-->
+      <!--booststrap-->
+      <link href="{{ url_for('static' , filename='css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" media="all">
       <!--//booststrap end-->
-      <!-- font-awesome icons -->
+      <!-- font-awesome icons
+
+  <link href="{{url_for('static' , filename = 'css/flexslider.css')}}" rel="stylesheet" type="text/css" media="all">
+     -->
+
+
       <link href="{{url_for('static' , filename = 'css/fontawesome-all.min.css')}}" rel="stylesheet" type="text/css" media="all">
       <!-- //font-awesome icons -->
+      <!-- For Clients slider -->
+      <link rel="stylesheet"href="{{url_for('static' , filename = 'css/flexslider.css')}}" type="text/css" media="all" />
+      <!--flexs slider-->
+      <link href="css/JiSlider.css" rel="stylesheet">
       <!--Shoping cart-->
       <link rel="stylesheet" href="{{url_for('static' , filename = 'css/shop.css')}}" type="text/css" />
       <!--//Shoping cart-->
@@ -30,55 +39,53 @@
       <link href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
    </head>
    <body>
-       <form class="" action="" method="post">
-
       <!--headder-->
       <div class="header-outs" id="home">
       <div class="header-bar">
-      
+
          <div class="container-fluid">
-            <div class="hedder-up row">
+            <!-- <div class="hedder-up row">
                <div class="col-lg-3 col-md-3 logo-head">
                   <h1><a class="navbar-brand" href="index.html">Book Store</a></h1>
-               </div>
-               <div class="col-lg-5 col-md-6 search-right">
-                  <form class="form-inline my-lg-0">
-                     <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                     <button class="btn" type="submit">Search</button>
-                  </form>
-               </div>
-            
+               </div> -->
+
             </div>
          </div>
-          <nav class="navbar navbar-expand-lg navbar-light">
+         <nav class="navbar navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                <ul class="navbar-nav ">
                   <li class="nav-item ">
-                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                     <a href="about.html" class="nav-link">About</a>
+                     <a href="#" class="nav-link">About</a>
+                  </li>
+
+                  <li class="nav-item active">
+                     <a href="#" class="nav-link">Shop Now</a>
                   </li>
                   <li class="nav-item">
-                     <a href="service.html" class="nav-link">Service</a>
-                  </li>
-                  <li class="nav-item">
-                     <a href="shop.html" class="nav-link">Shop Now</a>
+                     <a class="nav-link" href="#"   >
+                     Sell Book
+                     </a>
+
                   </li>
 
 
                   <li class="nav-item">
-                     <a href="contact.html" class="nav-link">Contact</a>
+                     <a href="/addcart" class="nav-link">{{name}}</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="/logout" class="nav-link">Logout</a>
                   </li>
                </ul>
             </div>
-          </nav>
+         </nav>
       </div>
-	  </div>
-      <!--//headder-->
+	  </div>      <!--//headder-->
       <!-- banner -->
       <div class="inner_page-banner one-img">
       </div>
@@ -91,7 +98,7 @@
                   <a href="index.html">Home</a>
                   <span>/ /</span>
                </li>
-               <li>Typography</li>
+               <li>Form</li>
             </ul>
          </div>
       </div>
@@ -100,20 +107,20 @@
       <!--Typography-->
       <section class="inner-pages py-5">
          <div class="container py-xl-5 py-sm-3">
-            <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Typography</h3>
+            <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Form</h3>
             <!-- forms -->
             <section class="typo-section py-4 border-top border-bottom">
                <h3 class="typo-main-heading mb-lg-4 mb-3 pr-3 pb-1">Form</h3>
                <!-- form1 -->
-               <form>
+               <form action="/newuser" method="post">
                   <div class="form-row">
                      <div class="form-group col-md-6">
-                        <label for="inputEmail4">Name</label>
-                         
-                        <input type="text" class="form-control" id="inputEmail4" placeholder="Name">
+                        Name
+
+                        <input type="text" class="form-control" id="inputEmail4" name = "name" placeholder="Name">
                      </div>
                      </div>
-                  
+
                   <div class="form-group">
                       Branch :  <select name="dept">
   <option value="AS">Aero Space</option>
@@ -127,17 +134,15 @@
   <option value="EE">Electrical and Electonics</option>
   <option value="MCA">Master in Computer Application</option>
   <option value="TE">Telecommunicaton Engineering</option>
-</select><br>
+</select><br><br>
                       <label for="phonenum">Phone Number (format: xxxx-xxx-xxx):</label><br/>
-  <input id="phonenum" type="tel" pattern="^\d{4}-\d{3}-\d{3}$" required >
+  <input id="phonenum" name= "phone" type="tel" pattern="^\d{4}-\d{3}-\d{3}$" required >
 
 
-                    
+
                   <button type="submit" name="submit" value="submit" class="btn btn-primary">Submit</button>
                </form>
-               <!--// form1 -->
-               <!-- form2 -->
-               <!--// form2 -->
+
             </section>
             <!--// forms -->
       <script src='js/jquery-2.2.3.min.js'></script>
@@ -146,13 +151,13 @@
       <script src="js/minicart.js"></script>
       <script>
          toys.render();
-         
+
          toys.cart.on('toys_checkout', function (evt) {
          	var items, len, i;
-         
+
          	if (this.subtotal() > 0) {
          		items = this.items();
-         
+
          		for (i = 0, len = items.length; i < len; i++) {}
          	}
          });
@@ -175,19 +180,19 @@
       <!-- here stars scrolling icon -->
       <script>
          $(document).ready(function () {
-         
+
          	var defaults = {
          		containerID: 'toTop', // fading element id
          		containerHoverID: 'toTopHover', // fading element hover id
          		scrollSpeed: 1200,
          		easingType: 'linear'
          	};
-         
-         
+
+
          	$().UItoTop({
          		easingType: 'easeOutQuart'
          	});
-         
+
          });
       </script>
       <!-- //here ends scrolling icon -->
